# ai-news-aggregator-deployment-final

./: Procfile  README.md  example copy.env  main.py  pyproject.toml
.github/workflows/: daily-digest.yml
app/: __init__.py  config.py  email_sender.py  run.py  scheduler.py  scraper.py
app/agent/: __init__.py  curator.py  curator_models.py  curator_prompts.py  email_agent.py  email_prompts.py  prompts.py  summarizer.py  user_profiles.py
app/database/: __init__.py  create_tables.py  database.py  models.py  repository.py
app/processors/: __init__.py  curator_processor.py  digest_processor.py  email_processor.py
app/scrapers/: __init__.py  anthropic.py  blog.py  youtube.py
docker/: README.md  docker-compose.yml
docs/: GITHUB_ACTIONS_SETUP.md
